2009-04-01  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ModuleDefinition.cs (Import): add overloads
	taking a MethodDefinition as a generic context.

2009-04-01  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionHelper.cs: throw proper exception
	when importing in an invalid context.

2009-03-12  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/AssemblyStripper.cs (PatchHeap): don't crash
	if the assembly doesn't contain a specific metadata heap.

2009-03-04  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/StructureWriter.cs: properly set the metadata tokens
	of newly emitted modules and assemblies. Fix #480729.

2009-01-28  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/MetadataResolver.cs:
		Add new MetadataResolver.

	* Mono.Cecil/GenericParameter.cs
	  Mono.Cecil/FieldDefinition.cs
	  Mono.Cecil/TypeReference.cs
	  Mono.Cecil/GenericInstanceMethod.cs
	  Mono.Cecil/IMemberDefinition.cs
	  Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/PropertyReference.cs
	  Mono.Cecil/EventReference.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil/EventDefinition.cs
	  Mono.Cecil/ModuleDefinition.cs
	  Mono.Cecil/MethodReference.cs
	  Mono.Cecil/FieldReference.cs
	  Mono.Cecil/ParameterDefinition.cs
	  Mono.Cecil/PropertyDefinition.cs
	  Mono.Cecil/ParameterReference.cs
	  Mono.Cecil.Cil/VariableReference.cs
	  Mono.Cecil.Cil/VariableDefinition.cs:
		Add Resolve to Definition methods on References.

	* Mono.Cecil.dll.sources, Mono.Cecil.csproj: add MetadataResolver.cs

2009-01-05  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionHelper.cs
	* Mono.Cecil/DefaultImporter.cs:
		Adjust references's generic parameter count on import.

2009-01-05  Sebastien Pouliot  <sebastien at ximian.com>

	* CodeReader.cs: Do not call VisitVariableDefinitionCollection
	unless LocalVarToken is different from zero.
	* CodeWriter.cs: Use HasVariables and HasExceptionHandlers.
	Write zero, not TokenType.Signature, for LocalVarToken if no